hover element and white space fix

--- a/themes/peccole-nevada/style.css
+++ b/themes/peccole-nevada/style.css
@@ -98,15 +98,15 @@ ul.uus-posts-wrapper li{
 	background-color: #00529b;
 	visibility:hidden;
 	opacity:0;
-	position:relative;
-	top:-200px;
+	position:absolute;
+	top:100px;
 
 	-webkit-transition: all 0.2s ease-out;  /* Android 2.1+, Chrome 1-25, iOS 3.2-6.1, Safari 3.2-6  */
 	transition: all 0.2s ease-out;  /* Chrome 26, Firefox 16+, iOS 7+, IE 10+, Opera, Safari 6.1+  */
 }
 .uus-posts-wrapper li:hover .uus-flat-text-wrapper{
 	visibility:visible;
-	opacity:1;
+	opacity:.95;
 }
 .uus-posts-wrapper .uus-flat-text-wrapper h3{
 	margin-top:0;
